--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Eldora Boo",
-  "name": "Eldora Boo",
+  "short_name": "Catherine Tao",
+  "name": "Catherine Tao",
   "icons": [
     {
       "src": "favicon.ico",
